--- a/src/stylesheets/_custom.scss
+++ b/src/stylesheets/_custom.scss
@@ -1,7 +1,7 @@
 // THEME COLORS 
-$teal-dark:    #0d503c;
-$teal-light:  #20c997;
-$orange: #fd7e14;
+$teal-dark:    #1a1a2e;
+$teal-light:  #8fa6d1;
+$orange: #0a58ca;
 $footer: #151414;
 
 $primary: $teal-dark;
